--- a/.render.yaml
+++ b/.render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: flask-app
     env: python
+    pythonVersion: "3.12"
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn run:app
     plan: free
